Added the store, fixed problems with the fonts, also added the team descriptions and script

--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Futbolitos.mx</title>
+        <title>Futbolitos</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="icon" href="/favicon.png" />
+        <link rel="icon" href="favicon.png" />
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/foundation.min.css">
         <link rel="stylesheet" href="css/futbolitos.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
@@ -29,61 +26,64 @@
             </div>                        
             <nav class="top-nav">
                 <div class="row">
-                    <ul class="small-12 medium-12 larger-12 solumns">
-                        <li><a href="#" title="Futbolitos" class="selected">Futbolitos</a></li>
-                        <li><a href="#" title="Juegos y descargas">Juegos y descargas</a></li>
-                        <li><a href="#" title="Noticias">Noticias</a></li>
-                        <li><a href="#" title="Tienda en línea">Tienda en línea</a></li>
-                        <li><a href="#" title="Licencia">Licencia</a></li>
-                        <li><a href="#" title="Contacto">Contacto</a></li>
+                    <ul class="small-12 medium-12 larger-12 columns">
+                        <li><a href="index.html" title="Futbolitos" class="selected red">Futbolitos</a></li>
+                        <li><a href="downloads.html" title="Juegos y descargas" class="orange">Juegos y descargas</a></li>
+                        <li><a href="store.html" title="Tienda en línea" class="green">Tienda en línea</a></li>
+                        <li><a href="license.html" title="Licencia" class="purple">Licencia</a></li>
+                        <li><a href="contact.html" title="Contacto" class="yellow">Contacto</a></li>
                     </ul>
                 </div>                
             </nav>
         </header>
+
         <section class="home">
             <div class="row">
                 <div class="home-content large-5 large-offset-8 columns">
                     <h2 class="title-section">¿Qué somos?</h2>
                     <p>
-                        Los Futbolitos somos jugadores mágicos que amamos el fútbol.<br><br>
-                        Nuestra vida gira alrededor del balón y defendemos con mucho corazón los colores de nuestro equipo.<br><br>
-                        Cada uno tiene una habilidad que nos hace especial dentro del terreno de juego, por lo que somos fácilmente identificables para los fanáticos.
+                        Los Futbolitos somos jugadores mágicos que amamos el fútbol.<br /><br />
+                        Nuestra vida gira alrededor del balón y defendemos con mucho corazón los colores de nuestro equipo.<br /><br />
+                        Cada uno tiene una habilidad que nos hace especial dentro del terreno de juego, por lo que somos fácilmente
+                        identificables para los fanáticos.
                     </p>                    
                 </div>
             </div>            
         </section>    
 
         <section class="who">
-            <div class="row who-content">                
-                <div class="who-players large-12 medium-12 small-12 columns">
-                    <h2 class="title-section">¿Quiénes somos?</h2>
-                    <ul>
-                        <li class="large-2 medium-3 small-6 columns" data-fname="ro"><a title="Ro" class="ro selected"><img src="img/img_futbolito_ro.png" alt="Ro"></a><span>Ro</span></li>
-                        <li class="large-2 medium-3 small-6 columns" data-fname="ed"><a title="Ed" class="ed"><img src="img/img_futbolito_ed.png" alt="Ed" ></a><span>Ed</span></li>
-                        <li class="large-2 medium-3 small-6 columns" data-fname="robogol"><a title="Robogol" class="robogol"><img src="img/img_futbolito_robogol.png" alt="Robogol"></a><span>Robogol</span></li>
-                        <li class="large-2 medium-3 small-6 columns" data-fname="d10s"><a title="D10s" class="d10s"><img src="img/img_futbolito_d10s.png" alt="D10s"></a><span>D10s</span></li>
-                        <li class="large-2 medium-3 small-6 columns" data-fname="zombinho"><a title="Zombinho" class="zombinho"><img src="img/img_futbolito_zombinho.png" alt="Zombinho"></a><span>Zombinho</span></li>
-                        <li class="large-2 medium-3 small-6 columns" data-fname="tike"><a title="Tike" class="tike"><img src="img/img_futbolito_tike.png" alt="Tike"></a><span>Tike</span></li>
-                        <li class="clearfix"></li>
-                    </ul>
-                </div>
-                <div class="who-players-content large-12 medium-12 small-12 columns">                    
-                    <div>
-                        <div class="who-players-info">
-                            <h3 class="ro">Ro</h3>
-                            <p class="ro">
-                                Los Futbolitos somos jugadores mágicos que amamos el fútbol.<br><br>
-                                Nuestra vida gira alrededor del balón y defendemos con mucho corazón los colores de nuestro equipo.<br><br>
-                                Cada uno tiene una habilidad que nos hace especial dentro del terreno de juego, por lo que somos fácilmente identificables para los fanáticos.
-                            </p>         
-                        </div>  
-                        <div class="who-players-image">
-                            <img src="img/img_who_ro.png" alt="Ro">
-                        </div>                        
+            <div class="ro">
+                <div class="row who-content">
+                    <div class="who-players large-12 medium-12 small-12 columns">
+                        <h2 class="title-section">¿Quiénes somos?</h2>
+                        <ul>
+                            <li class="large-2 medium-3 small-6 columns" data-fname="ro"><a title="Ro" class="ro selected"><img src="img/img_futbolito_ro.png" alt="Ro"></a><span>Ro</span></li>
+                            <li class="large-2 medium-3 small-6 columns" data-fname="ed"><a title="Ed" class="ed"><img src="img/img_futbolito_ed.png" alt="Ed" ></a><span>Ed</span></li>
+                            <li class="large-2 medium-3 small-6 columns" data-fname="robogol"><a title="Robogol" class="robogol"><img src="img/img_futbolito_robogol.png" alt="Robogol"></a><span>Robogol</span></li>
+                            <li class="large-2 medium-3 small-6 columns" data-fname="d10s"><a title="D10s" class="d10s"><img src="img/img_futbolito_d10s.png" alt="D10s"></a><span>D10s</span></li>
+                            <li class="large-2 medium-3 small-6 columns" data-fname="zombinho"><a title="Zombinho" class="zombinho"><img src="img/img_futbolito_zombinho.png" alt="Zombinho"></a><span>Zombinho</span></li>
+                            <li class="large-2 medium-3 small-6 columns" data-fname="tike"><a title="Tike" class="tike"><img src="img/img_futbolito_tike.png" alt="Tike"></a><span>Tike</span></li>
+                            <li class="clearfix"></li>
+                        </ul>
                     </div>
+                    <div class="who-players-content large-12 medium-12 small-12 columns">
+                        <div>
+                            <div class="who-players-info">
+                                <h3 class="ro">Ro</h3>
+                                <p class="distorted ro">
+                                    Ro es el capitán y estrella del Atlético. <br><br>
+                                    Posee una técnica privilegiada y es el que orquesta el medio campo de los leones con maestría y gran precisión.<br><br>
+                                    Es un líder por naturaleza y es defensor del juego limpio. Tiene mucho carácter y siempre busca que exista un buen ambiente tanto en el campo como en el vestidor.
+                                </p>
+                            </div>
+                            <div class="who-players-image">
+                                <img src="img/img_who_ro.png" alt="Ro">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="create-futbolito"></div>
                 </div>
-                <div class="create-futbolito"></div>                
-            </div>                      
+            </div>
         </section>  
 
         <section class="ligue">
@@ -91,15 +91,61 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="title-section">Liga Futbolitos</h2>
                 </div>
+                <div>
+                    <p class="large-3 medium-3 small-12 columns">
+                        Es el máximo torneo de fútbol que existe en el mundo.<br><br>
+                        Solo los mejores equipos y futbolitos tienen el honor de jugar en la Liga.<br><br>
+                        Actualmente participan seis poderosos equipos que se disputan la prestigiosa copa F.<br><br>
+                        Solo con corazón, habilidad, respeto, y amistad, se puede jugar en ella.
+                    </p>
+
+                    <span class="large-6 medium-6 small-12 columns">
+                        <img src="img/img_copa.png" alt="Copa liga Futbolitos">
+                    </span>
+
+                    <p class="large-3 medium-3 small-12 columns">
+                        La “F” es la copa que se le da al ganador de la liga Futbolitos <br><br>
+                        Es el máximo galardón otorgado al esfuerzo del campeón.<br><br>
+                        Todos los futbolitos del mundo sueñan con ella año con año.<br><br>
+                        Esta hecha de oro puro, y representa el orgullo, honor, y amor por el fútbol. <br><br>
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="teams">
+            <div class="row teams-content">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="title-section">Los Equipos</h2>
+                </div>
+                <ul>
+                    <li class="ro large-4 medium-4 small-6 columns"><a title="Atlético" class="modal-link" data-tname="atletico"><img src="img/img_team_atletico.png" alt="Atlético"><span>Atlético</span></a></li>
+                    <li class="ed large-4 medium-4 small-6 columns"><a title="Deportivo" class="modal-link" data-tname="deportivo"><img src="img/img_team_deportivo.png" alt="Deportivo"><span>Deportivo</span></a></li>
+                    <li class="robogol large-4 medium-4 small-6 columns"><a title="Robot Soccer Force" class="modal-link" data-tname="robot"><img src="img/img_team_robot.png" alt="Robot Soccer Force"><span>Robot SF</span></a></li>
+                    <li class="d10s large-4 medium-4 small-6 columns"><a title="Olympo FC" class="modal-link" data-tname="olympo"><img src="img/img_team_olympo.png" alt="Olympo FC"><span>Olympo FC</span></a></li>
+                    <li class="zombinho large-4 medium-4 small-6 columns"><a title="Zombie United" class="modal-link" data-tname="zombie"><img src="img/img_team_united.png" alt="Zombie United"><span>Zombie United</span></a></li>
+                    <li class="tike large-4 medium-4 small-6 columns"><a title="Sporting Cóatl" class="modal-link" data-tname="sporting"><img src="img/img_team_sporting.png" alt="Sporting Cóatl"><span>Sporting Cóatl</span></a></li>
+                    <div class="clearfix"></div>
+                </ul>
+            </div>
+        </section>
+
+        <section class="stadiums">
+            <div class="row stadiums-content">
+                <div class="large-12 medium-12 small-12 columns">
+                    <h2 class="title-section">Los Estadios</h2>
+                </div>
             </div>
         </section>
 
         <footer>
-            <p>Fútbol siempre</p>
+            <h2 class="title-section">"Fútbol siempre"</h2>
+            <img src="img/img-footer.png" alt="Fútbol Siempre">
         </footer>
 
         
         <script src="js/vendor/jquery-1.10.2.min.js"></script>
+        <script src="js/vendor/prefixfree.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
