fixed subtle errors with images and the nav bar

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
                         <li><a href="store.html" title="Tienda en línea" class="purple">Tienda en línea</a></li>
                         <li><a href="license.html" title="Licencia" class="yellow">Licencia</a></li>
                         <li><a href="contact.html" title="Contacto" class="aqua">Contacto</a></li>
-                        <li><a href="about.html" title="Nosotros" class="selected dblue">Nosotros</a></li>
+                        <li><a href="about.html" title="La Marca" class="selected dblue">La Marca</a></li>
                     </ul>
                 </div>                
             </nav>
@@ -57,6 +57,17 @@
             </div>
         </section>
         <footer>
+            <div class="social-media">
+                <a href="https://www.facebook.com/futbolitosfutbolsiempre" alt="Facebook">
+                    <img src="img/facebook.png" alt="Facebook" />
+                </a>
+                <a href="https://plus.google.com/111992708950424499485" alt="google plus">
+                    <img src="img/googleplus.png" alt="google plus" />
+                </a>
+                <a href="https://twitter.com/losfutbolitos" alt="twitter">
+                    <img src="img/twitter.png" alt="twitter" />
+                </a>
+            </div>
             <h2 class="title-section">"Fútbol siempre"</h2>
             <img src="img/img-footer.png" alt="Fútbol Siempre">
         </footer>
