--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,14 @@
     </div>
     <nav class="top-nav">
         <div class="row">
-            <ul class="small-12 medium-12 larger-12 solumns">
+            <ul class="small-12 medium-12 larger-12 columns">
                 <li><a href="index.html" title="Futbolitos" class="red">Futbolitos</a></li>
                 <li><a href="downloads.html" title="Juegos y descargas" class="orange">Juegos y descargas</a></li>
-                <li><a href="store.html" title="Tienda en línea" class="green">Tienda en línea</a></li>
-                <li><a href="license.html" title="Licencia" class="purple">Licencia</a></li>
-                <li><a href="contact.html" title="Contacto" class="selected yellow">Contacto</a></li>
+                <li><a href="news.html" title="Noticias" class="green">Noticias</a></li>
+                <li><a href="store.html" title="Tienda en línea" class="purple">Tienda en línea</a></li>
+                <li><a href="license.html" title="Licencia" class="yellow">Licencia</a></li>
+                <li><a href="contact.html" title="Contacto" class="selected aqua">Contacto</a></li>
+                <li><a href="about.html" title="La Marca" class="dblue">La Marca</a></li>
             </ul>
         </div>
     </nav>
@@ -57,6 +59,17 @@
 
 
 <footer>
+    <div class="social-media">
+        <a href="https://www.facebook.com/futbolitosfutbolsiempre" alt="Facebook">
+            <img src="img/facebook.png" alt="Facebook" />
+        </a>
+        <a href="https://plus.google.com/111992708950424499485" alt="google plus">
+            <img src="img/googleplus.png" alt="google plus" />
+        </a>
+        <a href="https://twitter.com/losfutbolitos" alt="twitter">
+            <img src="img/twitter.png" alt="twitter" />
+        </a>
+    </div>
     <h2 class="title-section">"Fútbol siempre"</h2>
     <img src="img/img-footer.png" alt="Fútbol Siempre">
 </footer>
