--- a/license.html
+++ b/license.html
@@ -26,12 +26,14 @@
     </div>
     <nav class="top-nav">
         <div class="row">
-            <ul class="small-12 medium-12 larger-12 solumns">
+            <ul class="small-12 medium-12 larger-12 columns">
                 <li><a href="index.html" title="Futbolitos" class="red">Futbolitos</a></li>
                 <li><a href="downloads.html" title="Juegos y descargas" class="orange">Juegos y descargas</a></li>
-                <li><a href="store.html" title="Tienda en línea" class="green">Tienda en línea</a></li>
-                <li><a href="license.html" title="Licencia" class="selected purple">Licencia</a></li>
-                <li><a href="contact.html" title="Contacto" class="yellow">Contacto</a></li>
+                <li><a href="news.html" title="Noticias" class="green">Noticias</a></li>
+                <li><a href="store.html" title="Tienda en línea" class="purple">Tienda en línea</a></li>
+                <li><a href="license.html" title="Licencia" class="selected yellow">Licencia</a></li>
+                <li><a href="contact.html" title="Contacto" class="aqua">Contacto</a></li>
+                <li><a href="about.html" title="La Marca" class="dblue">La Marca</a></li>
             </ul>
         </div>
     </nav>
@@ -39,39 +41,41 @@
 
 <section class="license">
     <div class="license-content row">
-        <div class="small-12 medium-12 larger-12 columns">
-            <h2 class="title-section">Licencia</h2>
+        <div class="license-info small-12 medium-12 larger-12 columns">
+            <h3 class="yellow">Licencia</h3>
+                <div class="orange">
+                   <p>Futbolitos es una marca registrada ante el Instituto Mexicano de la Propiedad Industrial e Instituto Nacional de Derecho de Autor. Sus personajes, logos, y equipos son propiedad del MSc Rogelio Calderón Garcia.</p>
+                    <p>El contenido y estructura de este sitio están protegidos por leyes de propiedad intelectual. Los contenidos de éste sitio no podrán ser copiados, modificados, distribuidos o usados para fines comerciales.</p>
+                </div>
         </div>
+        <div class="license-info small-12 medium-12 larger-12 columns">
+            <h3 class="orange">Preguntas Frecuentes</h3>
+            <div class="blue">
+                <h4 class="question">¿Futbolitos es una marca mexicana? </h4>
+                <p>Sí, Futbolitos es una marca creada y diseñada por mexicanos emprendedores y apasionados. Todos sus personajes, equipos, copa, y estadios son marca registrada. </p>
 
-        <div class="license-info small-12 medium-12 larger-12 columns">
-            <h3 class="orange">Licencia</h3>
-            <p class="blue">
-                <strong>¿Futbolitos es una marca mexicana?</strong>
-                <br>
-                Sí, Futbolitos es una marca creada y diseñada por mexicanos emprenderoes y apasionados. Todos sus personajes, equipos, copa, y estadios son marca registrada.
-                <br><br>
-                <strong>Quiero saber más de la licencia ¿Con quién puedo comunicarme para tener información de la misma?</strong>
-                <br>
-                Manda un correo a <a href="mailto:rcalderon@losfutbolitos.com.mx">rcalderon@losfutbolitos.com.mx</a>
-            </p>
-            <div class="image">
-                <img src="img/licence.png" alt="Licencia">
+                <p>Quiero saber más de la licencia ¿Con quién puedo comunicarme para tener información de la misma? </p>
+
+                <p>Manda un correo a <a href="mailto:rcalderon@losfutbolitos.com.mx" alt="email">rcalderon@losfutbolitos.com.mx</a></p>
             </div>
-        </div>
-        <div class="license-info small-12 medium-12 larger-12 columns">
-            <h3 class="yellow">Para saber más</h3>
-            <p class="orange">
-                Futbolitos es una marca registrada ante el Instituto Mexicano de la Propiedad Industrial e Insituto Nacional de Derecho de Autor. Sus personajes, logos, y equipos son propiedad del MSc Rogelio Calderón Garcia.
-                <br><br>
-                El contenido y estructura de este sitio están protegidos por leyes de propiedad intelectual. Los contenidos de éste sitio no podrán ser copiados, modificados, distribuidos o usados para
-                fines comerciales.
-            </p>
+            <img class="image" src="img/licence.png" alt="Licencia">
         </div>
     </div>
 </section>
 
 
 <footer>
+    <div class="social-media">
+        <a href="https://www.facebook.com/futbolitosfutbolsiempre" alt="Facebook">
+            <img src="img/facebook.png" alt="Facebook" />
+        </a>
+        <a href="https://plus.google.com/111992708950424499485" alt="google plus">
+            <img src="img/googleplus.png" alt="google plus" />
+        </a>
+        <a href="https://twitter.com/losfutbolitos" alt="twitter">
+            <img src="img/twitter.png" alt="twitter" />
+        </a>
+    </div>
     <h2 class="title-section">"Fútbol siempre"</h2>
     <img src="img/img-footer.png" alt="Fútbol Siempre">
 </footer>
