--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
                     <ul class="small-12 medium-12 larger-12 columns">
                         <li><a href="index.html" title="Futbolitos" class="selected red">Futbolitos</a></li>
                         <li><a href="downloads.html" title="Juegos y descargas" class="orange">Juegos y descargas</a></li>
-                        <li><a href="store.html" title="Tienda en línea" class="green">Tienda en línea</a></li>
-                        <li><a href="license.html" title="Licencia" class="purple">Licencia</a></li>
-                        <li><a href="contact.html" title="Contacto" class="yellow">Contacto</a></li>
+                        <li><a href="news.html" title="Noticias" class="green">Noticias</a></li>
+                        <li><a href="store.html" title="Tienda en línea" class="purple">Tienda en línea</a></li>
+                        <li><a href="license.html" title="Licencia" class="yellow">Licencia</a></li>
+                        <li><a href="contact.html" title="Contacto" class="aqua">Contacto</a></li>
+                        <li><a href="about.html" title="La Marca" class="dblue">La Marca</a></li>
                     </ul>
                 </div>                
             </nav>
+
         </header>
 
         <section class="home">
@@ -42,11 +45,14 @@
                 <div class="home-content large-5 large-offset-8 columns">
                     <h2 class="title-section">¿Qué somos?</h2>
                     <p>
-                        Los Futbolitos somos jugadores mágicos que amamos el fútbol.<br /><br />
-                        Nuestra vida gira alrededor del balón y defendemos con mucho corazón los colores de nuestro equipo.<br /><br />
-                        Cada uno tiene una habilidad que nos hace especial dentro del terreno de juego, por lo que somos fácilmente
-                        identificables para los fanáticos.
-                    </p>                    
+                        Los Futbolitos somos jugadores mágicos que amamos el fútbol.
+                    </p>
+                    <p>
+                        Nuestra vida gira alrededor del balón y defendemos con mucho corazón los colores de nuestro equipo.
+                    </p>
+                    <p>
+                        Cada uno tiene una habilidad que nos hace especial dentro del terreno de juego, por lo que somos fácilmente identificables para los fanáticos.
+                    </p>
                 </div>
             </div>            
         </section>    
@@ -57,12 +63,14 @@
                     <div class="who-players large-12 medium-12 small-12 columns">
                         <h2 class="title-section">¿Quiénes somos?</h2>
                         <ul>
-                            <li class="large-2 medium-3 small-6 columns" data-fname="ro"><a title="Ro" class="ro selected"><img src="img/img_futbolito_ro.png" alt="Ro"></a><span>Ro</span></li>
-                            <li class="large-2 medium-3 small-6 columns" data-fname="ed"><a title="Ed" class="ed"><img src="img/img_futbolito_ed.png" alt="Ed" ></a><span>Ed</span></li>
-                            <li class="large-2 medium-3 small-6 columns" data-fname="robogol"><a title="Robogol" class="robogol"><img src="img/img_futbolito_robogol.png" alt="Robogol"></a><span>Robogol</span></li>
-                            <li class="large-2 medium-3 small-6 columns" data-fname="d10s"><a title="D10s" class="d10s"><img src="img/img_futbolito_d10s.png" alt="D10s"></a><span>D10s</span></li>
-                            <li class="large-2 medium-3 small-6 columns" data-fname="zombinho"><a title="Zombinho" class="zombinho"><img src="img/img_futbolito_zombinho.png" alt="Zombinho"></a><span>Zombinho</span></li>
-                            <li class="large-2 medium-3 small-6 columns" data-fname="tike"><a title="Tike" class="tike"><img src="img/img_futbolito_tike.png" alt="Tike"></a><span>Tike</span></li>
+                            <li class="large-1 medium-1 small-6 columns" data-fname="mia"><a title="Mia" class="mia"><img src="img/img_futbolito_mia.png" alt="mia"></a><span>Mia</span></li>
+                            <li class="large-1 medium-1 small-6 columns" data-fname="zuri"><a title="Zuri" class="zuri"><img src="img/img_futbolito_zuri.png" alt="Zuri"></a><span>Zuri</span></li>
+                            <li class="large-1 medium-1 small-6 columns" data-fname="ro"><a title="Ro" class="ro selected"><img src="img/img_futbolito_ro.png" alt="Ro"></a><span>Ro</span></li>
+                            <li class="large-1 medium-1 small-6 columns" data-fname="ed"><a title="Ed" class="ed"><img src="img/img_futbolito_ed.png" alt="Ed" ></a><span>Ed</span></li>
+                            <li class="large-1 medium-1 small-6 columns" data-fname="robogol"><a title="Robogol" class="robogol"><img src="img/img_futbolito_robogol.png" alt="Robogol"></a><span>Robogol</span></li>
+                            <li class="large-1 medium-1 small-6 columns" data-fname="d10s"><a title="D10s" class="d10s"><img src="img/img_futbolito_d10s.png" alt="D10s"></a><span>D10s</span></li>
+                            <li class="large-1 medium-1 small-6 columns" data-fname="zombinho"><a title="Zombinho" class="zombinho"><img src="img/img_futbolito_zombinho.png" alt="Zombinho"></a><span>Zombinho</span></li>
+                            <li class="large-1 medium-1 small-6 columns" data-fname="tike"><a title="Tike" class="tike"><img src="img/img_futbolito_tike.png" alt="Tike"></a><span>Tike</span></li>
                             <li class="clearfix"></li>
                         </ul>
                     </div>
@@ -95,7 +103,7 @@
                     <p class="large-3 medium-3 small-12 columns">
                         Es el máximo torneo de fútbol que existe en el mundo.<br><br>
                         Solo los mejores equipos y futbolitos tienen el honor de jugar en la Liga.<br><br>
-                        Actualmente participan seis poderosos equipos que se disputan la prestigiosa copa F.<br><br>
+                        Actualmente participan ocho poderosos equipos que se disputan la prestigiosa copa F.<br><br>
                         Solo con corazón, habilidad, respeto, y amistad, se puede jugar en ella.
                     </p>
 
@@ -104,7 +112,7 @@
                     </span>
 
                     <p class="large-3 medium-3 small-12 columns">
-                        La “F” es la copa que se le da al ganador de la liga Futbolitos <br><br>
+                        La “F” es la copa que se le da al ganador de la liga Futbolitos.<br><br>
                         Es el máximo galardón otorgado al esfuerzo del campeón.<br><br>
                         Todos los futbolitos del mundo sueñan con ella año con año.<br><br>
                         Esta hecha de oro puro, y representa el orgullo, honor, y amor por el fútbol. <br><br>
@@ -119,12 +127,14 @@
                     <h2 class="title-section">Los Equipos</h2>
                 </div>
                 <ul>
-                    <li class="ro large-4 medium-4 small-6 columns"><a title="Atlético" class="modal-link" data-tname="atletico"><img src="img/img_team_atletico.png" alt="Atlético"><span>Atlético</span></a></li>
-                    <li class="ed large-4 medium-4 small-6 columns"><a title="Deportivo" class="modal-link" data-tname="deportivo"><img src="img/img_team_deportivo.png" alt="Deportivo"><span>Deportivo</span></a></li>
-                    <li class="robogol large-4 medium-4 small-6 columns"><a title="Robot Soccer Force" class="modal-link" data-tname="robot"><img src="img/img_team_robot.png" alt="Robot Soccer Force"><span>Robot SF</span></a></li>
-                    <li class="d10s large-4 medium-4 small-6 columns"><a title="Olympo FC" class="modal-link" data-tname="olympo"><img src="img/img_team_olympo.png" alt="Olympo FC"><span>Olympo FC</span></a></li>
-                    <li class="zombinho large-4 medium-4 small-6 columns"><a title="Zombie United" class="modal-link" data-tname="zombie"><img src="img/img_team_united.png" alt="Zombie United"><span>Zombie United</span></a></li>
-                    <li class="tike large-4 medium-4 small-6 columns"><a title="Sporting Cóatl" class="modal-link" data-tname="sporting"><img src="img/img_team_sporting.png" alt="Sporting Cóatl"><span>Sporting Cóatl</span></a></li>
+                    <li class="ro large-3 medium-4 small-6 columns"><a title="Atlético" class="modal-link" data-tname="atletico"><img src="img/img_team_atletico.png" alt="Atlético"></a></li>
+                    <li class="ed large-3 medium-4 small-6 columns"><a title="Deportivo" class="modal-link" data-tname="deportivo"><img src="img/img_team_deportivo.png" alt="Deportivo"></a></li>
+                    <li class="robogol large-3 medium-4 small-6 columns"><a title="Robot Soccer Force" class="modal-link" data-tname="robot"><img src="img/img_team_robot.png" alt="Robot Soccer Force"></a></li>
+                    <li class="mia large-3 medium-4 small-6 columns"><a title="Robot Soccer Force" class="modal-link" data-tname="mad"><img src="img/img_team_mad.png" alt="Mad Girls United"></a></li>
+                    <li class="d10s large-3 medium-4 small-6 columns"><a title="Olympo FC" class="modal-link" data-tname="olympo"><img src="img/img_team_olympo.png" alt="Olympo FC"></a></li>
+                    <li class="zombinho large-3 medium-4 small-6 columns"><a title="Zombie United" class="modal-link" data-tname="zombie"><img src="img/img_team_united.png" alt="Zombie United"></a></li>
+                    <li class="tike large-3 medium-4 small-6 columns"><a title="Sporting Cóatl" class="modal-link" data-tname="sporting"><img src="img/img_team_sporting.png" alt="Sporting Cóatl"></a></li>
+                    <li class="zuri large-3 medium-4 small-6 columns"><a title="Robot Soccer Force" class="modal-link" data-tname="estrellas"><img src="img/img_team_estrellas.png" alt="Estrellas FC"></a></li>
                     <div class="clearfix"></div>
                 </ul>
             </div>
@@ -133,12 +143,34 @@
         <section class="stadiums">
             <div class="row stadiums-content">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="title-section">Los Estadios</h2>
+                    <h2 class="title-section">Estadios</h2>
+                    <div class="teams large-2 medium-2 small-2  large-offset-10 medium-offset-10 small-offset-10 colums">
+                        <ul>
+                            <li class="ro"><a title="Atlético" class="stadium-link" data-tname="atletico"><img src="img/img_team_atletico.png" alt="Atlético"></a></li>
+                            <li class="tike"><a title="Sporting Coatl" class="stadium-link" data-tname="sporting"><img src="img/img_team_sporting.png" alt="Sporting Cóatl"></a></li>
+                            <li class="robogol"><a title="RobotSF" class="stadium-link" data-tname="robot"><img src="img/img_team_robot.png" alt="Robot Soccer Force"></a></li>
+                            <li class="ed"><a title="Deportivo" class="stadium-link" data-tname="deportivo"><img src="img/img_team_deportivo.png" alt="Deportivo"></a></li>
+                            <li class="d10s"><a title="Olympo" class="stadium-link" data-tname="olympo"><img src="img/img_team_olympo.png" alt="Olympo FC"></a></li>
+                            <li class="zombinho"><a title="Zombie United" class="stadium-link" data-tname="zombie"><img src="img/img_team_united.png" alt="Zombie United"></a></li>
+
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
 
         <footer>
+            <div class="social-media">
+                <a href="https://www.facebook.com/futbolitosfutbolsiempre" alt="Facebook">
+                    <img src="img/facebook.png" alt="Facebook" />
+                </a>
+                <a href="https://plus.google.com/111992708950424499485" alt="google plus">
+                    <img src="img/googleplus.png" alt="google plus" />
+                </a>
+                <a href="https://twitter.com/losfutbolitos" alt="twitter">
+                    <img src="img/twitter.png" alt="twitter" />
+                </a>
+            </div>
             <h2 class="title-section">"Fútbol siempre"</h2>
             <img src="img/img-footer.png" alt="Fútbol Siempre">
         </footer>
